--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@typed-secure-config",
+  "name": "typed-secure-config",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
