--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
+    "declaration": true,
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
