--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,18 +5,22 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/main.js",
-  "module": "./dist/main.js",
-  "types": "./dist/main.d.ts",
+  "main": "./dist/cjs/main.js",
+  "module": "./dist/esm/main.js",
+  "types": "./dist/types/main.d.ts",
   "exports": {
-    "types": "./dist/main.d.ts",
-    "import": "./dist/main.js"
+    "types": "./dist/types/main.d.ts",
+    "import": "./dist/esm/main.js",
+    "require": "./dist/cjs/main.js"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "run-p build:*",
+    "build:cjs": "tsc --project tsconfig.cjs.json",
+    "build:esm": "tsc --project tsconfig.esm.json"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
+    "npm-run-all": "^4.1.5",
     "typescript": "~5.7.2",
     "vite": "^6.0.1",
     "vite-plugin-dts": "^4.3.0"
